manifests/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: hello-world
spec:
  rules:
  - host: hello-world.bbl.pyxida.io
    http:
      paths:
      - backend:
          serviceName: hello-world
          servicePort: http
        path: /
